[gd_scene load_steps=56 format=2]

[ext_resource path="res://Scenes/characterNewLogic.gd" type="Script" id=1]
[ext_resource path="res://Scenes/gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-9.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sound/footsteps/05MovingPartsfootsteps.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/01Take DamageTake Damage 5.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-7.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-6.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-5.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-9.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sound/footsteps/Jump Impact2.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/01Take DamageTake Damage 1.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/01Take DamageTake Damage 2.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/Graphics/Dust/Dust.png" type="Texture" id=18]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-8.png" type="Texture" id=19]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-10.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sound/footsteps/02Footstep_Impactfootsteps.wav" type="AudioStream" id=21]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-7.png" type="Texture" id=22]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-11.png" type="Texture" id=23]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-4.png" type="Texture" id=24]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_2-4.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sound/footsteps/Jump Impact1.wav" type="AudioStream" id=26]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/01Take DamageTake Damage 4.wav" type="AudioStream" id=27]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-5.png" type="Texture" id=28]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-9.png" type="Texture" id=29]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-8.png" type="Texture" id=30]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-3.png" type="Texture" id=31]
[ext_resource path="res://Assets/Graphics/Character/Walking/Alternative_MC_Walking_1-2.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sound/footsteps/Jump Movement.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/01Take DamageTake Damage 3.wav" type="AudioStream" id=34]
[ext_resource path="res://Assets/Graphics/light image/light.png" type="Texture" id=35]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-12.png" type="Texture" id=36]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-13.png" type="Texture" id=37]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-14.png" type="Texture" id=38]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-2.png" type="Texture" id=39]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-7.png" type="Texture" id=40]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-8.png" type="Texture" id=41]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-6.png" type="Texture" id=42]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-3.png" type="Texture" id=43]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-10.png" type="Texture" id=44]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-5.png" type="Texture" id=45]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-1.png" type="Texture" id=46]
[ext_resource path="res://Assets/Graphics/Character/Idle/Alternative_MC_Idle-4.png" type="Texture" id=47]
[ext_resource path="res://Assets/Graphics/Character/In the Air/Alternative_MC_Jumping_And_On_Air.png" type="Texture" id=48]

[sub_resource type="PhysicsMaterial" id=8]
absorbent = true

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 46 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 47 ), ExtResource( 45 ), ExtResource( 42 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 3 ), ExtResource( 44 ), ExtResource( 23 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "In the Air",
"speed": 30.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 25 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 14 ) ],
"loop": true,
"name": "Walk",
"speed": 24.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
custom_solver_bias = 1.0
radius = 10.01
height = 146.31

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.72, 0.72, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=5]
resource_name = "light"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0, 0.0 ]
}

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 12, -52, 12, -49, 14, -46, 14, -41, 13, -39, 12, -38, 12, -26, 12, -24, 11, -23, 6, -23, 4, -23, 4, -22, 4, -19, 4, -18, 8, -18, 10, -17, 12, -10, 13, 9, 12, 19, 12, 29, 14, 37, 14, 65, 13, 67, 11, 66, 6, 67, 4, 67, -1, 68, -8, 67, -10, 36, -10, 32, -8, 32, -12, 2, -12, -15, -9, -18, -4, -18, -4, -20, -5, -22, -4, -23, -11, -24, -11, -24, -13, -26, -13, -41, -13, -53, -11, -54, -3, -54, -3, -54, -3, -54, -3, -56, -4, -61, -7, -66, -5, -67, -4, -65, -3, -62, -2, -60, -1, -56, -1, -54, 10, -54, 12, -53 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.498534 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 0.588235 )

[node name="RigidBody2D" type="RigidBody2D" groups=["player"]]
position = Vector2( 512, 300 )
mode = 2
mass = 20.0
physics_material_override = SubResource( 8 )
gravity_scale = 20.0
continuous_cd = 1
contacts_reported = 5
contact_monitor = true
linear_velocity = Vector2( 5, 0 )
linear_damp = 0.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.0998718, 0.1 )
frames = SubResource( 1 )
animation = "In the Air"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
scale = Vector2( 0.998718, 1 )
remote_path = NodePath("../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 0.998718, 1 )
current = true
smoothing_enabled = true
smoothing_speed = 7.0

[node name="Listener2D" type="Listener2D" parent="Camera2D"]
current = true

[node name="MainCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0.264, 20.822 )
shape = SubResource( 2 )

[node name="Audio" type="Node2D" parent="."]

[node name="JumpImpact1" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 26 )
bus = "playerJump"

[node name="JumpImpact2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 15 )
bus = "playerJump"

[node name="JumpMovement" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 33 )
bus = "PlayerMovement"

[node name="Footsteps" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 21 )
bus = "PlayerMovement"

[node name="Movement" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 4 )
bus = "PlayerMovement"

[node name="landImpact" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 26 )
bus = "Land"

[node name="takeDamage1" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 16 )
bus = "Take Damage"

[node name="takeDamage2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 17 )
bus = "Take Damage"

[node name="takeDamage3" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 34 )
bus = "Take Damage"

[node name="takeDamage4" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 27 )
bus = "Take Damage"

[node name="takeDamage5" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 5 )
bus = "Take Damage"

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -8, -70 )
texture = ExtResource( 35 )
texture_scale = 0.1
color = Color( 1, 0.72, 0.72, 1 )
energy = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Light2D"]
autoplay = "light"
anims/RESET = SubResource( 4 )
anims/light = SubResource( 5 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 1, 0 )
occluder = SubResource( 6 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( 8, 103 )
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 20
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
texture = ExtResource( 18 )
emission_shape = 2
emission_rect_extents = Vector2( 18.89, 1 )
direction = Vector2( 0, -5 )
gravity = Vector2( 0, 200 )
initial_velocity = 115.79
initial_velocity_random = 1.0
tangential_accel = 40.68
scale_amount = 0.01
scale_amount_random = 0.04
color = Color( 1, 1, 1, 0.501961 )
color_initial_ramp = SubResource( 7 )

[node name="gui" parent="." instance=ExtResource( 2 )]

[node name="characterRaycast" type="RayCast2D" parent="."]
scale = Vector2( 1.884, 1 )
enabled = true
cast_to = Vector2( 0, 108.148 )

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_RigidBody2D_body_exited"]
